changed className to class

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>React App</title>
   </head>
-  <body className="bg-dark" style="height: 100%; font-family: 'Press Start 2P', cursive;" >
+  <body class="bg-dark" style="height: 100%; font-family: 'Press Start 2P', cursive;" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
