--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Grupy Dojo!</title>
   </head>
   <body class="bg-dark" style="height: 100%; font-family: 'Press Start 2P', cursive;" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
